<resources>
    <string name="app_name">Looking Sus</string>
    <string name="email">email</string>
    <string name="enter_email">Enter email address</string>
    <string name="pass">password</string>
    <string name="enter_pass">Enter password</string>
    <string name="login">LOG IN</string>
    <string name="login_smaller_case">Log In</string>
    <string name="delete">Delete</string>
    <string name="loginToAccount">Log in to see your</string>
    <string name="homework">homework</string>
    <string name="forgotPass">Forgot your password?</string>
    <string name="you_whore">Boo hoo, you whore.</string>
    <string name="send_msg_pass_reset">Send me a text message and I\'ll give you a new password. You\'re email, btw, is dip.dyan@beta.cocoa.io (fake)</string>
    <string name="btnContinue">Continue</string>
    <string name="tvWelcome">The Alien Welcomes You, User!</string>

    <string name="appDesc">The all new app that will make sure you never f*ck up your homework.</string>
    <string name="fuckDilip"> Because now it\' time to f*ck Dilip\'s as$ back.</string>
    <string name="doNotReproduce">Works only for Oxfordians. This app shouldn\'t be WhatsApped. Account creation is disabled.</string>
    <string name="bnPhy">Physics</string>
    <string name="bnChem">Chemistry</string>
    <string name="btP3">Pure Maths</string>
    <string name="bnStats">Statistics</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sampleDataStringTopic">Ex: 9D | Q. 1, 2, 3</string>
    <string name="placeholderSubtitle">An Interesting Subtitle</string>
    <string name="btn_add_nw_rcrd">Add New Record</string>
    <string name="userProfileDesc">Default User Profile Account. Unchangeable</string>
    <string name="rv_icon_desc">Icon for Recycler View record</string>
    <string name="dueDate">Due: 12 Oct 2020</string>
    <string name="done">Done</string>
    <string name="btnSaveTask">Save</string>
    <string name="record_title">Exercise Title</string>
    <string name="add_new_record">Add New Task</string>
    <string name="btnCancel">Cancel</string>
    <string name="placeholder_date_time">--:--</string>
    <string name="date_assigned">Date Assigned</string>
    <string name="date_submit">Submission Date</string>
    <string name="buttonSubmitText">Mark As Done</string>

    <!--    Numbers     -->
    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="_03">03</string>
    <string name="_04">04</string>
    <string name="_05">05</string>
    <string name="_06">06</string>
    <string name="_07">07</string>
    <string name="_08">08</string>
    <string name="_09">09</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>

    <!--  Months  -->
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="saving_data">Saving Data</string>
    <string name="welcome_activity_img">Picture of an alien.</string>
    <string name="no_task_msg">No tasks have been added for this section. To add a task tap the + icon at the top.</string>
    <string name="btnDeleteTask">Delete This Task</string>
    <string name="delete_this_item">Delete this item?</string>
    <string name="you_sure_you_wanna_delete_this">You sure you wanna delete this?</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="details">Details</string>
    <string name="year"> Year </string>
    <string name="variant">Variant</string>
    <string name="page_number">Page Number</string>
    <string name="question_paper">Question Paper</string>
    <string name="bottom_line">Bottom Line</string>
    <string name="practice_text">If your task is a past paper practice you can add details here.</string>
    <string name="app_icon">App Icon on Image View</string>
    <string name="uni_form_subtitle">A cool little subtitle will go here. Add a string with key to your strings.xml</string>
    <string name="uni_form_title">Welcome to Threads</string>
    <string name="uni_btn_get_started">Get Started</string>
    <string name="email_str">Enter your email address</string>
    <string name="pass_str">Enter your password</string>

</resources>