<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="63.5dp"
    android:background="@drawable/bg_recycler_card"
    android:clickable="true">

    <ImageView
        android:id="@+id/cellIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/rv_icon_desc"
        android:src="@drawable/ic_record_alt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/llItemTextDetails"/>

    <LinearLayout
        android:id="@+id/llItemTextDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cellIcon"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cellTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/placeholderSubtitle"
            android:textColor="@color/rvRecordColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cellSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:letterSpacing="0.04"
            android:text="@string/dueDate"
            android:textColor="@color/rvSubtitleColor"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.35dp"
        android:layout_marginHorizontal="13dp"
        android:contentDescription="@string/rv_icon_desc"
        android:scaleType="fitXY"
        android:src="@drawable/ic_card_bottom_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>