<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="io.github.praanto__samadder.cocoa.login_form.LoginFormViewModel" />

        <import type="android.view.View"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_activity_login_form"
        android:background="@color/generalBackground"
        tools:context=".login_form.LoginForm">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="20dp"
            android:visibility="@{viewModel.isProgressBarVisible ? View.VISIBLE : View.GONE}"
            android:backgroundTint="#D2D6D6D6">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="50dp"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/black"/>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/loginToAccount"
                android:textColor="@color/rvTitleColor"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="32sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/homework"
                android:textColor="@color/rvTitleColor"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="32sp"
                android:layout_marginBottom="60dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/sf_pro_display_bold"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="16dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:width="380dp"
                    android:autofillHints="@string/email"
                    android:background="@drawable/bg_white_text_view"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@={viewModel.userEmail}"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/sf_pro_display_bold"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/pass"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="16dp">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="380dp"
                    android:autofillHints="@string/pass"
                    android:background="@drawable/bg_white_text_view"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@={viewModel.userPassword}"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="16dp">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="#CACACA"
                    android:fontFamily="@font/inter_semi_bold"
                    android:onClick="@{() -> viewModel.btnLoginClick()}"
                    android:paddingHorizontal="20dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/UIKitBlue"
                    android:textSize="17sp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:paddingTop="10dp"
                android:text="@string/forgotPass"
                android:textColor="#fff" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>